# trip-viewer

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  LINUX_DEV_SETUP.md  README.md  RELEASING.md  dashcam-viewer-design.md  package-lock.json  package.json
.github/workflows/: release.yml  verify-dry-run.yml
scripts/: cargo-sweep.mjs  check-signing-key.sh  release.mjs  verify-updater.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: diagnose_diff.rs  fixup_segment_ids.rs  gps_hex.rs  gps_test.rs  import_legacy_db.rs  inspect_mp4.rs  make_bad_fixtures.rs  scan_real.rs
src-tauri/icons/: icon.icns
src-tauri/src/: app_settings.rs  archive.rs  error.rs  issues.rs  lib.rs  main.rs  migration_v2.rs  model.rs  paths.rs  startup.rs  storage.rs  video_server.rs  window_fit.rs
src-tauri/src/db/: manual_trip_merges.rs  migrations.rs  mod.rs  places.rs  segments.rs  settings.rs  tags.rs  timelapse_jobs.rs  trip_gps.rs
src-tauri/src/db/migrations/: 0001_init.sql  0002_places.sql  0003_timelapse_jobs.sql  0004_settings.sql  0005_padded_count.sql  0006_speed_curve.sql  0007_trip_camera_meta.sql  0008_manual_trip_merges.sql  0009_storage_sizes.sql  0010_segment_tombstones.sql  0012_trip_gps.sql
src-tauri/src/gps/: decoder.rs  miltona.rs  mod.rs  shenshu.rs
src-tauri/src/import/: cleanup.rs  config.rs  discovery.rs  diskspace.rs  distribute.rs  hasher.rs  logger.rs  mod.rs  stage.rs  types.rs  wipe.rs
src-tauri/src/metadata/: mod.rs  mp4_probe.rs
src-tauri/src/places/: commands.rs
src-tauri/src/scan/: errors.rs  grouping.rs  mod.rs  naming.rs  walker.rs
src-tauri/src/scans/: audio_rms.rs  commands.rs  coverage.rs  ee_normalize.rs  gps_place.rs  gps_stationary.rs  mod.rs  worker.rs
src-tauri/src/tags/: commands.rs  mod.rs  vocabulary.rs
src-tauri/src/timelapse/: cleanup.rs  commands.rs  concurrency.rs  events.rs  ffmpeg.rs  mod.rs  speed_curve.rs  types.rs  worker.rs
src-tauri/src/trips/: commands.rs  merge.rs  mod.rs
src/components/: KeyboardShortcutsHelp.tsx  MainNavTabs.tsx  UpdateChecker.tsx
src/engine/: SyncEngine.ts  interpolate.ts  useSyncEngine.ts
src/ipc/: archive.ts  dialog.ts  gps.ts  importer.ts  issues.ts  library.ts  places.ts  scanner.ts  tags.ts  timelapse.ts  trips.ts
src/state/: scanSlice.ts  store.ts  tagsSlice.ts  timelapseSlice.ts
src/types/: import.ts  model.ts
src/utils/: format.ts  issueKinds.ts  (+4 more)
(+39 files in other folders)
